--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "generateInstructorsPersonalScheduleShareButtons": "node scripts/generateButtonPagesForEveryNotionUser.js"
+    "build": "webpack --mode=production"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@notionhq/client": "^2.2.15",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0"
   },
   "devDependencies": {
-    "prettier": "^3.3.3"
+    "css-loader": "^7.1.2",
+    "html-inline-css-webpack-plugin": "^1.11.2",
+    "html-webpack-plugin": "^4.5.2",
+    "prettier": "^3.3.3",
+    "script-ext-html-webpack-plugin": "^2.1.5",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   }
 }
